--- a/themes/tjay/theme.toml
+++ b/themes/tjay/theme.toml
@@ -1,10 +1,10 @@
-name = 'Theme name'
+name = 'tjayv1'
 license = 'MIT'
-licenselink = 'https://github.com/owner/repo/LICENSE'
-description = 'Theme description'
+licenselink = 'https://github.com/tjaynl/tjay.nl/LICENSE'
+description = 'My personal theme'
 
 # The home page of the theme, where the source can be found
-homepage = 'https://github.com/owner/repo'
+homepage = 'https://github.com/tjaynl/tjay.nl'
 
 # If you have a running demo of the theme
 demosite = 'https://owner.github.io/repo'
